--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,6 +37,10 @@ dev = [
   "ruff>=0.1",
   "pandas-stubs",
 ]
+docs = [
+  "mkdocs>=1.4",
+  "mkdocs-material>=9",
+]
 
 [project.urls]
 Homepage = "https://github.com/spunfromsun/haveyoursay-analysis"
